# twitter-api-as-a-service

./: .gitignore  LICENSE  README.md  cdk.json  deploy.sh  package-lock.json  package.json  pyproject.toml
lambda/: app.py
lib/: twitter-api-as-a-service-stack.ts
test/: api_test.py  twitter-api-as-a-service.test.ts
