[tool.poetry]
name = "twitter-api-as-a-service"
version = "0.1.0"
description = ""
authors = ["lambda-chat <chat.algebrique@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests-oauthlib = "^1.3.1"
aws-lambda-powertools = "^1.25.10"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
python-dotenv = "^0.20.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
